vlib/v/checker/tests/mut_parms_struct_param_err.vv
@[params]
struct Params {
mut:
	a bool
	x int
}

fn foo(mut opts Params) bool {
	return opts.a
}

foo(a: true)
